# bteam_utils

./: pyproject.toml
bteam_utils/: __init__.py  common_calendar.py  common_progress.py
bteam_utils/common_prohibit_replacer/: __init__.py  base_prohibit_replacer.py  mantis_prohibit_replacer.py  path_prohibit_replacer.py  redmine_prohibit_replacer.py  teams_prohibit_replacer.py
src/bteam_utils/: common_evm.py  common_progress.py  common_xml.py
src/bteam_utils/common_prohibit_replacer/: __init__.py  abstract_prohibit_replacer.py  redmine_prohibit_replacer.py  teams_prohibit_replacer.py
