[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bteam-utils"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["pandas", "holidays"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bteam_utils*"]
